<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="status_turn_x">Knight\'s Turn</string>
    <string name="status_turn_o">Queen\'s Turn</string>
    <string name="status_x_wins">Knight Wins!</string>
    <string name="status_o_wins">Queen Wins!</string>
    <string name="status_draw">Draw!</string>
    <string name="restart">Restart</string>
    <string name="score">Score</string>
    <string name="player_x">Knight (X)</string>
    <string name="player_o">Queen (O)</string>
    <string name="content_tile">Tile %1$d</string>
</resources>
